# RAG_gradio

./: .gitignore  pyproject.toml
RAG_gradio_langchain/: 1_history.json  _history.json  app.py  chain.py  chatbot.py  config.py  hihi.txt  loaders.py  main.py  retriever.py  test.py  test_bd.py  utils.py
RAG_gradio_langchain/vectore/ab723eaf-7157-4a5d-b603-3543ec615adc/: index_metadata.pickle
RAG_gradio_langchain/vectorstores/1/: 1_history.json  chroma.sqlite3
RAG_gradio_langchain/vectorstores/11/: chroma.sqlite3
rag_gradio/: RAG.py  ex.py  fiasko.py  ggg.py
rag_gradio/vectore/: chroma.sqlite3
