[tool.poetry]
name = "rag-gradio"
version = "0.1.0"
description = ""
authors = ["GRIBok11 <lenovoyogad8000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gradio = "^4.41.0"
langchain = "^0.2.14"
langchain-community = "^0.2.12"
langchain-groq = "^0.1.9"
langchain-huggingface = "^0.0.3"
chromadb = "^0.5.5"
langchain-chroma = "^0.1.2"
plotly = "^5.23.0"
docx = "^0.2.4"
python-docx = "^1.1.2"
pypdf = "^4.3.1"
mypy = "^1.11.1"
npm = "^0.1.1"
node = "^1.2.2"
langchain-postgres = "^0.0.9"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
bcrypt = "^4.2.0"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
starlette = "^0.38.2"
itsdangerous = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
